# TB2J

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  LICENSE  README.md  buildimage.sh  change.md  pyproject.toml  requirements.txt  run_alltest.sh  setup.py  setup_test_submodule.sh  test_delta.py  upload_to_pip.sh
.github/workflows/: python-app.yml
.kiro/steering/: product.md  structure.md  tech.md
TB2J/: .citation.py.swp  .exchange.py.swp  .exchangeCL2.py.swp  .gitignore  .pauli.py.swp  A2J.py  FDTB.py  GreenGPU.py  Hdownfolder.py  Jdownfolder.py  Jtensor.py  MAE.py  MAEGreen.py  MAEGreenGPU.py  Oije_example.py  Oije_example_config.toml  Oiju.py  Oiju2.py  Oiju_FD.py  Oiju_FD2.py  Oiju_epc.py  Oiju_epw.py  Oiju_epw2.bak  Oiju_epw2.py  Oiju_epw2_README.md  Oiju_epw3.py  TB2J_optimization_prototype.ipynb  __init__.py  anisotropy.py  assigned_basis.txt  basis.py  citation.py  contour.py  cut_cell.py  density_matrix.py  dmft_model.py  epc.py  epw.py  epwparser.py  example_config.toml  (+35 more)
TB2J/abacus/: .gitignore  MAE.py  __init__.py  abacus_api.py  abacus_wrapper.py  gen_exchange_abacus.py  occupations.py  orbital_api.py  splitSOC.py  stru_api.py  test_density_matrix.py  test_read_HRSR.py  test_read_stru.py
TB2J/deprecated/: Oiju.py  Oiju_epc.py  exchange_pert.py  sisl_wrapper.py
TB2J/downfold/: Hdownfolder.py
TB2J/gpu/: __init__.py  exchangeCL_gpu.py  exchange_ncl_gpu.py  exchange_pert2_gpu.py  jax_utils.py  mae_green_gpu.py
TB2J/green/: __init__.py  green.py  runtime.py
TB2J/interfaces/: __init__.py  dmft.py  gpaw_interface.py  lawaf_interface.py  manager.py  siesta_interface.py  wannier90_interface.py
TB2J/io_exchange/: __init__.py  edit.py  example_input_matjes.txt  exchange.out  io_espins.py  io_exchange.py  io_exchange2.py  io_matjes.py  io_multibinit.py  io_tomsasd.py  io_txt.py  io_uppasd.py  io_vampire.py  plot.py  structure.py
TB2J/lawaf/: lawaf_interface.py
TB2J/magnon/: __init__.py  io_exchange2.py  magnon3.py  magnon_band.py  magnon_cli.py  magnon_dos.py  magnon_io.py  magnon_math.py  magnon_parameters.py  plot.py  plot_magnon_dos_cli.py  structure.py
TB2J/mathutils/: __init__.py  auto_kpath.py  fermi.py  fibonacci_sphere.py  kR_convert.py  lowdin.py  magnons.py  rotate_spin.py
TB2J/scripts/: TB2J_downfold.py  TB2J_edit.py  TB2J_eigen.py  TB2J_magnon.py  TB2J_magnon2.py  TB2J_magnon_dos.py  TB2J_merge.py  TB2J_plot_exchange.py  TB2J_plot_magnon_bands.py  TB2J_rotate.py  TB2J_rotateDM.py  abacus2J.py  dmft2J.py  siesta2J.py  wann2J.py
TB2J/spinham/: base_parser.py  constants.py  h_matrix.py  hamiltonian.py  hamiltonian_terms.py  obtain_J.py  plot.py  qsolver.py  spin_api.py  spin_xml.py  supercell.py
TB2J/tests/: test_cli_remove_sublattice.py  test_cli_toggle_exchange.py
TB2J/wannier/: __init__.py  w90_parser.py  w90_tb_parser.py
agent_files/knowledges/: Oiju_FD2.md  green_vectorization.md
docs/: conf.py  greens_function_method.md  index.rst  install.md  requirements.txt
docs/src/: .#siesta.rst  .faq.rst.swp  Contributors.md  Contributors.rst  ReleaseNotes.md  ReleaseNotes.rst  abacus.md  applications.rst  convention.rst  cutcell.md  development.md  downfold.md  ecosystem.md  edit.md  eigen.rst  extend.md  extend.rst  faq.rst  (+26 more)
scripts/: TB2J_downfold.py  TB2J_eigen.py  TB2J_magnon.py  TB2J_magnon2.py  TB2J_magnon_dos.py  TB2J_merge.py  TB2J_plot_magnon_bands.py  TB2J_rotate.py  TB2J_rotateDM.py  abacus2J.py  convert_epw_to_netcdf.py  siesta2J.py  wann2J.py
skill/: package_skill.py
tests/: README.md  init_test_data.sh  setup_test_data.sh  update_test_data.sh
tutorial/: TB2J.md
(+91 files in other folders)
